# proc-macro-workshop

./: Cargo.toml  main.rs
builder/: Cargo.toml
builder/src/: builder.rs  lib.rs
builder/tests/: 01-parse.rs  progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: progress.rs
