[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
# TODO
syn = { version = "1.0.31", features = ["extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
cargo-expand = "0.6.0"
thiserror = "1.0.19"
anyhow = "1.0.31"

